Adding the ID number generation back-end.

--- a/src/Demo/IdServicesBundle/Resources/config/routing.yml
+++ b/src/Demo/IdServicesBundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 api_generateIdNumber:
-    path:     /api/generateIdNumber
+    path:     /api/generateIdNumber/{dateOfBirth}/{gender}/{origin}
     methods: [GET]
     defaults: { _controller: IdServicesBundle:IdServices:generateIdNumber }
 
